--- a/tools/sweep_config.yaml
+++ b/tools/sweep_config.yaml
@@ -11,3 +11,5 @@ parameters:
     values:
       - "((0.5, 1.0, 2.0),)"
       - "((0.7, 1.0, 1.3),)"
+  backbone:
+    values: ["resnet50", "resnet101", "resnet152"]
