--- a/tools/sweep_config.yaml
+++ b/tools/sweep_config.yaml
@@ -12,4 +12,6 @@ parameters:
       - "((0.5, 1.0, 2.0),)"
       - "((0.7, 1.0, 1.3),)"
   backbone:
-    values: ["resnet50", "resnet101", "resnet152"]
+    values: ["resnet101", "resnet152"]
+  # batch_size:
+  #   values: [2, 4]
