--- a/tools/sweep_config.yaml
+++ b/tools/sweep_config.yaml
@@ -1,5 +1,7 @@
 program: tools/train_cat_kidney.py
 method: grid
+name: cat_kidney_detection_sweep
+allow_duplicates: false
 parameters:
   learning_rate:
     values: [1e-6, 5e-6, 1e-5]
@@ -13,5 +15,5 @@ parameters:
       - "((0.7, 1.0, 1.3),)"
   backbone:
     values: ["resnet101", "resnet152"]
-  # batch_size:
-  #   values: [2, 4]
+  batch_size:
+    values: [2, 4]
