--- a/tools/sweep_config.yaml
+++ b/tools/sweep_config.yaml
@@ -1,6 +1,13 @@
 program: tools/train_cat_kidney.py
 method: grid
 name: cat_kidney_detection_sweep
+command:
+  - ${env}
+  - python
+  - ${program}
+  - "--wandb"
+  - "--colab"
+  - ${args}
 parameters:
   learning_rate:
     values: [1e-4, 1e-5]
@@ -11,7 +18,7 @@ parameters:
   aspect_ratios:
     values:
       - "((0.5, 1.0, 2.0),)"
-      - "((0.7, 1.0, 1.3),)"
+      - "((0.8, 1.0, 1.3),)"
   backbone:
     values: ["resnet101", "resnet152"]
   batch_size:
