--- a/tools/sweep_config_cat.yaml
+++ b/tools/sweep_config_cat.yaml
@@ -1,6 +1,6 @@
-program: tools/train_c2.py
-method: grid
-name: c2_sweep
+program: tools/train_cat_labelme.py
+method: bayes
+name: cat_kidney_sweep
 command:
   - ${env}
   - python
@@ -12,18 +12,31 @@ command:
   - "--batch_size"
   - "8"
   - "--num_epochs"
-  - "25"
+  - "50"
+  - "--learning_rate"
+  - ".0002"
   - ${args}
 parameters:
+  # roi_heads_score_thresh:
+  #   values: [0.6] # [0.6, 0.9]
+  # rpn_fg_iou_thresh:
+  #   values: [0.7, 0.8]
+  # rpn_bg_iou_thresh:
+  #   values: [0.4, 0.6]
+  # roi_heads_nms_thresh:
+  #   values: [0.3, 0.4]  # [0.3, 0.6]
+  # learning_rate:
+  #   min: 0.00002
+  #   max: 0.0002
+  #   distribution: log_uniform
   roi_heads_score_thresh:
-    values: [0.6] # [0.6, 0.9]
-  rpn_fg_iou_thresh:
-    values: [0.7, 0.8]
-  rpn_bg_iou_thresh:
-    values: [0.4, 0.6]
-  roi_heads_nms_thresh:
-    values: [0.3, 0.4]  # [0.3, 0.6]
-  learning_rate:
-    values: [0.0002, 0.0005]
-  contrast_range:
-    values: [[0.2, 1.7], [0.5, 1.3]]
+    min: 0.3
+    max: 0.7
+    distribution: uniform
+  score_thresh:
+    min: 0.5
+    max: 0.8
+    distribution: uniform
+  # batch_size:
+  #   values: [4, 8]
+
