--- a/tools/sweep_config_cat.yaml
+++ b/tools/sweep_config_cat.yaml
@@ -10,12 +10,8 @@ command:
   - "--backbone"
   - "resnet152"
   - "--wandb"
-  - "--batch_size"
-  - "8"
   - "--num_epochs"
   - "50"
-  - "--learning_rate"
-  - ".0002"
   - ${args}
 metric:
   name: mAP
@@ -23,24 +19,28 @@ metric:
 parameters:
   # roi_heads_score_thresh:
   #   values: [0.6] # [0.6, 0.9]
-  # rpn_fg_iou_thresh:
-  #   values: [0.7, 0.8]
-  # rpn_bg_iou_thresh:
-  #   values: [0.4, 0.6]
+  rpn_bg_iou_thresh:
+    min: 0.1
+    max: 0.3
+    distribution: uniform
+  rpn_fg_iou_thresh:
+    min: 0.85
+    max: 0.95
+    distribution: uniform
   # roi_heads_nms_thresh:
   #   values: [0.3, 0.4]  # [0.3, 0.6]
   # learning_rate:
   #   min: 0.00002
   #   max: 0.0002
   #   distribution: log_uniform
-  roi_heads_score_thresh:
-    min: 0.3
-    max: 0.7
-    distribution: uniform
-  score_thresh:
-    min: 0.5
-    max: 0.8
-    distribution: uniform
+  # roi_heads_score_thresh:
+  #   min: 0.3
+  #   max: 0.7
+  #   distribution: uniform
+  # score_thresh:
+  #   min: 0.5
+  #   max: 0.8
+  #   distribution: uniform
   # batch_size:
   #   values: [4, 8]
 
